--- a/ui/modules/multiplayer/direct.partial.html
+++ b/ui/modules/multiplayer/direct.partial.html
@@ -1,13 +1,16 @@
 <mp-menu-navbar></mp-menu-navbar>
 <div style="display: flex; justify-content: center; align-items: center; height: 80%">
-	<div style="background: var(--bg-secondary); padding: 10px; border-radius: 5px; color: white; text-align: center">
-		<div layout="row">
-			<input type="text" id="directip" name="ip" placeholder="Server IP" value="127.0.0.1" tabindex="1"/>
-			<md-button class="button servers-button" ng-class="" ng-click="multiplayer.pasteClipboardToDirectIP()">Paste from Clipboard</md-button>
+	<div style="background: var(--bg-secondary); padding: 10px; border-radius: 5px; color: white; text-align: center; display: flex; flex-direction: column; justify-content: flex-start; align-items: flex-start;">
+		<div style="display: flex; justify-content: center; align-items: center; flex-direction: row;">
+			<input type="text" id="directip" name="ip" placeholder="Server IP" value="127.0.0.1" tabindex="1" style="border-radius: 0; background-color: var(--bg-main);" />
+			<button class="servers-button" style="height: 2em" ng-class="" ng-style="" tabindex="false" ng-click="multiplayer.pasteClipboardToDirectIP()">Paste from Clipboard</md-button>
 		</div>
-		<input type="text" id="directport" name="port" placeholder="Server Port" value="30814" tabindex="2"/>
-		<!--<input type="text" id="nickname" name="nickname" placeholder="Nickname"/>-->
-		<md-button id="direct-connect-button" class="button" ng-class="" ng-click="multiplayer.directConnect()" tabindex="3">Connect</md-button>
+		<input type="text" id="directport" name="port" placeholder="Server Port" value="30814" tabindex="2" style="border-radius: 0; background-color: var(--bg-main); margin-top: 0.5em;" />
+		<button id="direct-connect-button" class="servers-button" ng-class="" ng-click="multiplayer.directConnect()" md-class="" md-style="" tabindex="false" style="margin-top: 0.5em">Connect</button>
 	</div>
 	<div id="footer"></div>
 </div>
+
+<!-- <div id="direct-connect-container">
+
+</div> -->
