--- a/ui/modules/options/multiplayer.partial.html
+++ b/ui/modules/options/multiplayer.partial.html
@@ -35,6 +35,14 @@
   <md-checkbox ng-model="options.data.values.disableInstabilityPausing" ng-change="options.applyState()"></md-checkbox>
 </md-list-item>
 
+<md-list-item md-no-ink ng-show="options.data.values.showAdvancedMPOptions">
+  <p><span class="mp-setting-highlight">EXPERIMENTAL</span> {{:: 'ui.options.multiplayer.enableNewChatMenu' |
+    translate }}</p>
+  <md-tooltip md-direction="right">{{:: 'ui.options.multiplayer.enableNewChatMenu.tooltip' | translate }}
+  </md-tooltip>
+  <md-checkbox ng-model="options.data.values.enableNewChatMenu" ng-change="options.applyState()"></md-checkbox>
+</md-list-item>
+
 <md-list-item md-no-ink>
   <p>{{:: 'ui.options.multiplayer.queueSpawnEdit' | translate }}</p>
   <md-tooltip md-direction="right">{{:: 'ui.options.multiplayer.queueSpawnEdit.tooltip' | translate }}</md-tooltip>
@@ -112,7 +120,6 @@
   <md-tooltip md-direction="right">{{:: 'ui.options.multiplayer.enableBlobs.tooltip' | translate }}</md-tooltip>
   <md-checkbox ng-model="options.data.values.enableBlobs" ng-change="options.applyState()"></md-checkbox>
 </md-list-item>
-
 
 <div class="mp-setting-border" ng-show="options.data.values.enableBlobs">
   <bng-accordion flex class="vAccordion--default" multiple>
