--- a/ui/modules/multiplayer/login.partial.html
+++ b/ui/modules/multiplayer/login.partial.html
@@ -3,7 +3,7 @@
 
 <div style="height:100%; background-color: rgba(0, 0, 0, 0.50);">
 	<div class="offset-div">
-		<div id="MultiplayerLoginBody" style="display:flex; height:100%; flex-direction:column; align-items: center; justify-content: center;">
+		<div id="MultiplayerLoginBody" style="display:flex; height:100%; flex-direction:column; padding-left:150px; align-items: center; justify-content: center;">
 			<img src="local://local/ui/modules/multiplayer/beammp.png" alt="BeamMP Logo">
 			<h2 class="text-red" id="LOGINERRORFIELD"></h2>
 			<form id="LoginContainer">
@@ -17,8 +17,8 @@
 				</div>
 			</form>
 			<form id="GuestContainer" style="display: none;">
-				<h2 class="text-white">Playing as a guest may have some server restrictions, for the full experience we recommend using a registered account.</h2>
-				<div style="display:flex; align-content: space-evenly;">
+				<h3 class="text-white">Playing as a guest may have some server restrictions, for the full experience we recommend using a registered account.</h3>
+				<div style="display:flex;  align-content: space-evenly;">
 					<md-button class="button" ng-click="guestLogin()">Play</md-button>
 					<md-button class="button" ng-click="switchConnection()">I have an account</md-button>
 				</div>
