--- a/ui/modules/multiplayer/multiplayer.html
+++ b/ui/modules/multiplayer/multiplayer.html
@@ -38,14 +38,19 @@
 		      {{:: 'ui.multiplayer.servers' | translate}}
         </md-button>
 
-        <md-button id="recent-btn" ng-class="{'md-primary md-raised': (multiplayer.stateName.indexOf('multiplayer.recent') !== -1)}" ui-sref="menu.multiplayer.recent" style="text-align:left;">
-          <md-icon class="material-icons">alarm</md-icon>
-				  {{:: 'ui.multiplayer.recent' | translate}}
+        <md-button id="feat-servers-btn" ng-class="{'md-primary md-raised': (multiplayer.stateName.indexOf('multiplayer.featured') !== -1)}" ui-sref="menu.multiplayer.featured" style="text-align:left;">
+          <md-icon class="material-icons">desktop_windows</md-icon>
+		      {{:: 'ui.multiplayer.featured' | translate}}
         </md-button>
 
         <md-button id="favorites-btn" ng-class="{'md-primary md-raised': (multiplayer.stateName.indexOf('multiplayer.favorites') !== -1)}" ui-sref="menu.multiplayer.favorites" style="text-align:left;">
           <md-icon class="material-icons">star</md-icon>
 				  {{:: 'ui.multiplayer.favorites' | translate}}
+        </md-button>
+
+        <md-button id="recent-btn" ng-class="{'md-primary md-raised': (multiplayer.stateName.indexOf('multiplayer.recent') !== -1)}" ui-sref="menu.multiplayer.recent" style="text-align:left;">
+          <md-icon class="material-icons">alarm</md-icon>
+				  {{:: 'ui.multiplayer.recent' | translate}}
         </md-button>
 
         <md-button id="direct-connect-btn" ng-class="{'md-primary md-raised': (multiplayer.stateName.indexOf('multiplayer.direct') !== -1)}" ui-sref="menu.multiplayer.direct" style="text-align:left;">
