Added Patreon to Sidebar

--- a/ui/modules/multiplayer/multiplayer.html
+++ b/ui/modules/multiplayer/multiplayer.html
@@ -70,6 +70,11 @@
           {{:: 'ui.multiplayer.discord' | translate}}
         </md-button>
 
+        <md-button id="forum-btn" onclick="openExternalLink(`https://www.patreon.com/BeamMP`)" ng-class="" style="text-align:left;">
+          <img src="local://local/ui/modules/multiplayer/icons/Digital-Patreon-Logo_White.png" style="width: 25px;vertical-align: middle;"></img>
+          {{:: 'ui.multiplayer.patreon' | translate}}
+        </md-button>
+
 	    <md-divider></md-divider>
 	    
 	    <div flex="" style="max-height: none;"></div>
