--- a/ui/modules/multiplayer/multiplayer.html
+++ b/ui/modules/multiplayer/multiplayer.html
@@ -76,7 +76,7 @@
 	    
         <md-button id="direct-connect-btn" ng-click="logout()" class="md-raised md-accent" style="text-align:left;">
           <md-icon class="material-icons">exit_to_app</md-icon>
-				  Logout
+				  {{:: 'ui.multiplayer.logout' | translate}}
         </md-button>
       </md-content>
 
