synced vehicleconfig.js functions
synced (aka changed):
_generateTreeBranch function ???
processPart
selectPart -> selectParts
deselectPart
Vehicleconfig_debug function ???

never learned java script, its quite weird

theres one thing i know i didnt sync, intentionally, the slotPart.value thingy, the vanilla vehicleconfig.js no longer (?) cares about it, but for selfish reasons (i think a server i play in needs that) so i kept it, its just a number

and yes, this fix the highlighting, which i did not test in a real MP enviroment, i dont know the workflow for it :|

--- a/ui/modules/vehicleconfig/partial.parts.html
+++ b/ui/modules/vehicleconfig/partial.parts.html
@@ -115,16 +115,14 @@
 
     <div layout="row" layout-align="start center" class="md-padding" style="flex: 0 0 auto; border-top: solid 2px var(--bng-orange); padding-top:0; padding-bottom:0;">
       <div style="flex: 1 1 auto;">
-        <!--
-        <md-checkbox ng-model="vehConf_parts.selectSubParts" md-no-ink flex>
-          {{:: 'ui.vehicleconfig.subparts' | translate}}
-        </md-checkbox>
-        -->
         <md-checkbox bng-sound-class="bng_checkbox_generic" ng-model="vehConf_parts.showAuxiliary" md-no-ink flex>
           <md-icon class="material-icons">report</md-icon> {{:: "ui.showAuxiliary" | translate}}
         </md-checkbox>
         <md-checkbox bng-sound-class="bng_checkbox_generic" ng-model="vehConf_parts.simple" ng-change="vehConf_parts.recalcTree();" md-no-ink flex>
           {{:: 'ui.vehicleconfig.simpleTree' | translate}}
+        </md-checkbox>
+        <md-checkbox bng-sound-class="bng_checkbox_generic" ng-model="vehConf_parts.selectSubParts" md-no-ink flex>
+          {{:: 'ui.vehicleconfig.subparts' | translate}}
         </md-checkbox>
       </div>
 
