--- a/ui/modules/multiplayer/multiplayer.html
+++ b/ui/modules/multiplayer/multiplayer.html
@@ -1,3 +1,5 @@
+<!-- Icons can be found here: https://fonts.google.com/icons?selected=Material+Icons -->
+
 <link type="text/css" rel="stylesheet" href="/ui/modules/multiplayer/multiplayer.css">
 
 <div id="LoadingServer" style="display: none;">
@@ -34,8 +36,13 @@
     <div flex layout="row" style="overflow: auto;">
       <md-content layout="column" id="left-menu">
         <md-button id="servers-btn" ng-class="{'md-primary md-raised': (multiplayer.stateName.indexOf('multiplayer.servers') !== -1)}" ui-sref="menu.multiplayer.servers" style="text-align:left;">
-          <md-icon class="material-icons">desktop_windows</md-icon>
+          <md-icon class="material-icons">explore</md-icon>
 		      {{:: 'ui.multiplayer.servers' | translate}}
+        </md-button>
+
+        <md-button id="servers-btn" ng-class="{'md-primary md-raised': (multiplayer.stateName.indexOf('multiplayer.official') !== -1)}" ui-sref="menu.multiplayer.official" style="text-align:left;">
+          <md-icon class="material-icons">desktop_windows</md-icon>
+		      {{:: 'ui.multiplayer.official' | translate}}
         </md-button>
 
         <md-button id="feat-servers-btn" ng-class="{'md-primary md-raised': (multiplayer.stateName.indexOf('multiplayer.featured') !== -1)}" ui-sref="menu.multiplayer.featured" style="text-align:left;">
