some UI related work for the new upvoting feature. Needs functionality still

--- a/ui/modules/multiplayer/servers.partial.html
+++ b/ui/modules/multiplayer/servers.partial.html
@@ -69,6 +69,7 @@
 				<th onclick="sortTable('sname', false)">{{:: 'ui.multiplayer.description' | translate}}</th>
 				<th onclick="sortTable('map', false)">{{:: 'ui.multiplayer.map' | translate}}</th>
 				<th onclick="sortTable('players', true)">{{:: 'ui.multiplayer.players' | translate}}</th>
+				<th onclick="sortTable('votes', true)">{{:: 'ui.multiplayer.votes' | translate}}</th>
 			</tr>
 		</thead>
 		<tbody id="serversTableBody">
