--- a/ui/modules/multiplayer/multiplayer.html
+++ b/ui/modules/multiplayer/multiplayer.html
@@ -45,10 +45,10 @@
 		      {{:: 'ui.multiplayer.official' | translate}}
         </md-button>
 
-        <md-button id="feat-servers-btn" ng-class="{'md-primary md-raised': (multiplayer.stateName.indexOf('multiplayer.featured') !== -1)}" ui-sref="menu.multiplayer.featured" style="text-align:left;">
+        <!--<md-button id="feat-servers-btn" ng-class="{'md-primary md-raised': (multiplayer.stateName.indexOf('multiplayer.featured') !== -1)}" ui-sref="menu.multiplayer.featured" style="text-align:left;">
           <md-icon class="material-icons">star</md-icon>
 		      {{:: 'ui.multiplayer.featured' | translate}}
-        </md-button>
+        </md-button>-->
 
         <md-button id="favorites-btn" ng-class="{'md-primary md-raised': (multiplayer.stateName.indexOf('multiplayer.favorites') !== -1)}" ui-sref="menu.multiplayer.favorites" style="text-align:left;">
           <md-icon class="material-icons">bookmark</md-icon>
