--- a/ui/modules/apps/BeamMP-PlayerList/app.html
+++ b/ui/modules/apps/BeamMP-PlayerList/app.html
@@ -22,8 +22,12 @@
 			padding: 0;
 			margin: 0;
 		}
+		.view-button {
+			width: 25px;
+			min-height: 27px;
+		}
 		.tp-button {
-			width: 50px;
+			width: 62px;
 			min-height: 27px;
 		}
 		#players-table {
@@ -60,7 +64,7 @@
 		}
 		.direction-buttons {
 			height: 25px;
-			width: 25px;
+			width: 31px;
 			float: right;
 		}
 		.player-button {
@@ -73,12 +77,19 @@
 			background-color: rgba(0, 0, 0, 0.65);
 			color: #FFFFFF;
 		}
+		.player-view {
+			color: white;
+			transition: 0.20s;
+			background-color: rgba(0, 0, 0, 0);
+			cursor:pointer;
+		}
 	</style>
 	<div id="main-container">
 		<div id="plist-container">
 			<table id="players-table">
 				<tr>
-					<th colspan="2">
+					<th colspan="1">ID</th>
+					<th colspan="3">
 						Players
 						<button class="buttons direction-buttons" ng-click="plSwapHorizontal()">🡘</button>
 						<button class="buttons direction-buttons" ng-click="plSwapVertical()">🡙</button>
